# Hades

./: Cargo.toml
hs-app/: Cargo.toml
hs-app/src/: app.rs  gui.rs  main.rs  window.rs
hs-app/src/gui/: menubar.rs  mod.rs
hs-gba/: Cargo.toml
hs-gba/src/: emu.rs  emulator.rs  gba.rs  lib.rs  protocol.rs  scheduler.rs
hs-gba/src/core/: mod.rs
hs-gba/src/memory/: bios.rs  bus.rs  mod.rs  rom.rs
hs-gba/src/ppu/: mod.rs
hs-gui/: Cargo.toml
