[package]
name = "hs-app"
version = "0.1.0"
edition = "2021"

[dependencies]
hs-gba = { path = "../hs-gba/" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = ["docking", "tables-api"] }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
glium = { version = "0.32.1", default-features = true }